# Freyr

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  freyr.sqlite  pyproject.toml  run.py  settings.gradle.kts
.github/workflows/: publisher.yaml  publishing.yaml
app/: build.gradle.kts
app/src/main/jte/components/: footer.kte  navbar.kte
app/src/main/jte/components/htmx/: device-readings.kte  devices.kte
app/src/main/jte/templates/: device.kte  index.kte
app/src/main/jte/templates/devices/: list.kte
app/src/main/kotlin/github/buriedincode/: Freyr.kt  Settings.kt  Utils.kt
app/src/main/kotlin/github/buriedincode/controllers/: BaseController.kt  DeviceController.kt  HtmlController.kt  ReadingController.kt
app/src/main/kotlin/github/buriedincode/models/: Device.kt  IJson.kt  Reading.kt
app/src/main/resources/: default.properties  log4j2.properties
app/src/main/resources/static/css/: styles.css
app/src/main/resources/static/js/: bulma-tabs.js  chart.js  scripts.js
freyr/: __init__.py  __main__.py  constants.py  database.py  models.py  settings.py  utils.py
freyr-device/: README.md  config.py  main.py
freyr-screen/: README.md  config.py  waveshare_display.py
freyr/database/: __init__.py  tables.py
freyr/models/: __init__.py  device.py  reading.py
freyr/routers/: api.py  html.py
freyr/routers/api/: __init__.py  device.py  reading.py
gradle/: libs.versions.toml
static/css/: custom-bulma-light.css  styles.css
static/js/: bulma-tabs.js  current.js  dashboard.js  device.js  historical.js  scripts.js
templates/: base.jinja  current.html.jinja  dashboard.html.jinja  device.html.jinja  historical.html.jinja  index.html.jinja
templates/components/: chart.jinja  filter.jinja  footer.jinja  forms.jinja  navbar.jinja
