[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "BuriedInCode@tuta.io", name = "BuriedInCode"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed"
]
dependencies = [
  "fastapi >= 0.110.0",
  "jinja2 >= 3.1.3",
  "pony >= 0.7.17",
  "pydantic >= 2.6.2",
  "rich >= 13.7.0",
  "tomli-w >= 1.0.0",
  "uvicorn >= 0.27.1"
]
description = "Tracks temperature and humidity readings and graphs the results in a web dashboard."
dynamic = ["version"]
keywords = [
  "dht22",
  "fastapi",
  "micropython",
  "pi-pico-w"
]
license = {text = "MIT"}
name = "freyr"
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
  "pre-commit >= 3.6.2"
]
postgres = [
  "psycopg2 >= 2.9.9"
]

[project.scripts]
Freyr = "run:main"

[project.urls]
Issues = "https://github.com/Buried-In-Code/Freyr/issues"
Source = "https://github.com/Buried-In-Code/Freyr"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.hatch.version]
path = "freyr/__init__.py"

[tool.ruff]
fix = true
line-length = 100
output-format = "grouped"
show-fixes = true
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "native"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = [
  "D",
  "DTZ",
  "ERA001",
  "EXE",
  "FBT",
  "PLR2004",
  "TCH"
]
ignore-init-module-imports = true
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.field_validator"]

[tool.ruff.lint.per-file-ignores]
"freyr-device/*" = ["INP001"]
"freyr-device/config.py" = ["S105"]
"freyr-device/main.py" = ["ANN201", "BLE001", "I001", "T201"]
"freyr-screen/*" = ["INP001"]
"freyr-screen/config.py" = ["S105"]
"freyr-screen/waveshare_display.py" = ["ANN001", "ANN101"]
"freyr/routers/*" = ["B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
