[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "BuriedInCode@tuta.io", name = "BuriedInCode"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed"
]
dependencies = [
  "fastapi >= 0.110.0",
  "jinja2 >= 3.1.4",
  "pony >= 0.7.17",
  "pydantic >= 2.7.2",
  "rich >= 13.7.1",
  "tomli-w >= 1.0.0",
  "uvicorn >= 0.30.0"
]
description = "Tracks temperature and humidity readings and graphs the results in a web dashboard."
dynamic = ["version"]
keywords = [
  "dht22",
  "fastapi",
  "micropython",
  "pi-pico-w"
]
license = {text = "MIT"}
name = "freyr"
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
postgres = [
  "psycopg >= 3.1.19"
]

[project.scripts]
Freyr = "run:main"

[project.urls]
Issues = "https://github.com/Buried-In-Code/Freyr/issues"
Source = "https://github.com/Buried-In-Code/Freyr"

[tool.hatch.version]
path = "freyr/__init__.py"

[tool.ruff]
fix = true
line-length = 100
output-format = "grouped"
show-fixes = true
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "native"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = [
  "COM812",
  "D",
  "DTZ",
  "FBT",
  "PLR0913",
  "PLR2004"
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.field_validator"]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.rye]
dev-dependencies = [
  "pre-commit >= 3.7.1"
]
